bug fix - Navbar doesn't collapse - Navbar overlaps root contents

--- a/dresscode/client-app/src/app/layout/App.css
+++ b/dresscode/client-app/src/app/layout/App.css
@@ -1,6 +1,7 @@
 #root {
   background-color: #fffbf6;
-  margin-top: 90px;
+  /* margin-top: 90px; */
+  margin-top: 59px;
   width: 100vw;
   height: 100vh;
 }
