--- a/dresscode/client-app/src/features/navbar/NavBar.css
+++ b/dresscode/client-app/src/features/navbar/NavBar.css
@@ -1,4 +1,4 @@
-.fixed-top {
+/* .fixed-top {
   background-color: #74529e;
   min-height: 90px;
 }
@@ -18,4 +18,29 @@
 .navbar-light .navbar-nav .nav-link:hover,
 .navbar-light .navbar-nav .nav-link.active {
   color: #ed6b4b;
+} */
+
+.navbar {
+  background: #74529e;
 }
+
+.center-menu {
+  margin-left: 150px;
+}
+
+img {
+  width: 200px;
+}
+
+.navbar-light .navbar-nav .nav-link {
+  font-size: 1.8rem;
+  padding: 0.3rem 1.1rem;
+  font-weight: 700;
+  color: #f9b222;
+}
+
+.navbar-light .navbar-nav .nav-link:focus,
+.navbar-light .navbar-nav .nav-link:hover,
+.navbar-light .navbar-nav .nav-link.active {
+  color: #ed6b4b;
+} 
